--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,6 @@
 	width: 500px;
 	top: calc(50% - 250px);
 	left: calc(50% - 250px);
-	border: 1px solid blue;
 }
 
 .task {
@@ -23,4 +22,9 @@
 
 .total-cost {
 	font-weight: bold;
+}
+
+.title-bar{
+	display: flex;
+	justify-content: space-between;
 }
